--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,9 @@ body{
   background-color: #f5f5f5;
   font-family: 'Roboto', sans-serif;
 }
+
+.App{
+  display: flex;
+  height: 100vh;
+  width: 100%;
+}
