--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,8 @@ body{
 .content::-webkit-scrollbar {
   width: 8px;
 }
+
+.content::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 4px;
+}
