--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,7 @@ body{
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 4px;
 }
+
+.content::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.4);
+}
