--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,8 @@ body{
     width: 100%;
     height: auto;
   }
+  .main {
+    flex: none;
+    height: calc(100vh - 60px); /* Adjust based on sidebar height */
+  }
+}
