--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,6 @@ a:hover {
 /* End of App.css */
 
 /* Please do not remove the comments */
+
+/* These comments are used to identify the file and its purpose */
+
